# ezbench

./: .gitignore  Dockerfile  README.md  create_results_html.py  docker_controller.py  evaluator.py  llm.py  main.py  pyproject.toml
llms/: anthropic_model.py  genai_model.py
long25/: agg_to_text.context.md  agg_to_text.expect.txt  agg_to_text.py  agg_to_text.test.term
short25/: stdin_pause.py
tests/: construct_device_mesh.py  create_mask.py  create_scalar.py  harness.py  init_backend.py  linear.py  torchrunnable.py
