[project]
name = "ezbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "cohere>=5.14.0",
    "docker>=7.1.0",
    "google-cloud-aiplatform>=1.86.0",
    "google-generativeai>=0.8.4",
    "groq>=0.20.0",
    "llama-cpp-python>=0.3.8",
    "markdown>=3.7",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "pillow>=11.1.0",
    "pygments>=2.19.1",
    "selenium>=4.30.0",
]
